// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Modal /> > Snapshots > should match snapshot 1`] = `
<div>
  <div
    class="Modal_modalWrapper__1txblt60 Modal_modalWrapper_active_true__1txblt61 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683 draggable"
    >
      <svg test-file-stub />
      <div
        class="TitleBar_title__1kpzw685"
      >
        file.bat
      </div>
      <div
        class="TitleBar_optionsBox__1kpzw680"
      >
        <button
          class="TitleBar_option__1kpzw681 Button_button__1bzq74l0"
        >
          <img
            alt="close"
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
    <ul
      class="Modal_menuWrapper__1txblt64"
    >
      <li
        class="Modal_menuItem__1txblt65"
      >
        File
      </li>
      <li
        class="Modal_menuItem__1txblt65"
      >
        Edit
      </li>
    </ul>
    <div
      class="Modal_content__1txblt63"
    >
      Hello
    </div>
    <div
      class="sprinkles_justifyContent__1txm3g81f Modal_buttonWrapper__1txblt62"
      style="--justifyContent__1txm3g81e: flex-end;"
    >
      <button
        class="Button_button__1bzq74l0"
        value="Ok"
      >
        Ok
      </button>
      <button
        class="Button_button__1bzq74l0"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`<Modal /> > Snapshots > should match snapshot with buttonsAligment prop equals center 1`] = `
<div>
  <div
    class="Modal_modalWrapper__1txblt60 Modal_modalWrapper_active_true__1txblt61 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683 draggable"
    >
      <svg test-file-stub />
      <div
        class="TitleBar_title__1kpzw685"
      >
        file.bat
      </div>
      <div
        class="TitleBar_optionsBox__1kpzw680"
      >
        <button
          class="TitleBar_option__1kpzw681 Button_button__1bzq74l0"
        >
          <img
            alt="close"
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
    <div
      class="Modal_content__1txblt63"
    >
      Hello
    </div>
    <div
      class="sprinkles_justifyContent__1txm3g81f Modal_buttonWrapper__1txblt62"
      style="--justifyContent__1txm3g81e: center;"
    >
      <button
        class="Button_button__1bzq74l0"
        value="Ok"
      >
        Ok
      </button>
      <button
        class="Button_button__1bzq74l0"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`<Modal /> > Snapshots > should match snapshot with buttonsAligment prop equals flex-start 1`] = `
<div>
  <div
    class="Modal_modalWrapper__1txblt60 Modal_modalWrapper_active_true__1txblt61 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683 draggable"
    >
      <svg test-file-stub />
      <div
        class="TitleBar_title__1kpzw685"
      >
        file.bat
      </div>
      <div
        class="TitleBar_optionsBox__1kpzw680"
      >
        <button
          class="TitleBar_option__1kpzw681 Button_button__1bzq74l0"
        >
          <img
            alt="close"
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
    <div
      class="Modal_content__1txblt63"
    >
      Hello
    </div>
    <div
      class="sprinkles_justifyContent__1txm3g81f Modal_buttonWrapper__1txblt62"
      style="--justifyContent__1txm3g81e: flex-start;"
    >
      <button
        class="Button_button__1bzq74l0"
        value="Ok"
      >
        Ok
      </button>
      <button
        class="Button_button__1bzq74l0"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`<Modal /> > Snapshots > should match snapshot with different activeWindow 1`] = `
<div>
  <div
    class="sprinkles_width__1txm3g81t sprinkles_height__1txm3g81z Modal_modalWrapper__1txblt60 react-draggable"
    style="--width__1txm3g81s: 300; --height__1txm3g81y: 200; transform: translate(0px,0px);"
  >
    <div
      class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_false__1kpzw684 draggable"
    >
      <svg test-file-stub />
      <div
        class="TitleBar_title__1kpzw685"
      >
        file.bat
      </div>
      <div
        class="TitleBar_optionsBox__1kpzw680"
      >
        <button
          class="TitleBar_option__1kpzw681 Button_button__1bzq74l0"
        >
          <img
            alt="close"
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
    <div
      class="Modal_content__1txblt63"
    >
      Hello
    </div>
  </div>
</div>
`;

exports[`<Modal /> > Snapshots > should match snapshot with width and height props 1`] = `
<div>
  <div
    class="sprinkles_width__1txm3g81t sprinkles_height__1txm3g81z Modal_modalWrapper__1txblt60 Modal_modalWrapper_active_true__1txblt61 react-draggable"
    style="--width__1txm3g81s: 300; --height__1txm3g81y: 200; transform: translate(0px,0px);"
  >
    <div
      class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683 draggable"
    >
      <svg test-file-stub />
      <div
        class="TitleBar_title__1kpzw685"
      >
        file.bat
      </div>
      <div
        class="TitleBar_optionsBox__1kpzw680"
      >
        <button
          class="TitleBar_option__1kpzw681 Button_button__1bzq74l0"
        >
          <img
            alt="close"
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
    <div
      class="Modal_content__1txblt63"
    >
      Hello
    </div>
  </div>
</div>
`;
